fix: add dummy field for SEO titles

--- a/content/posts/XX-placeholder/placeholder.mdx
+++ b/content/posts/XX-placeholder/placeholder.mdx
@@ -4,6 +4,8 @@ date: 2019-01-13
 slug: placeholder
 title: >
   This is a metadata placeholder.
+seo_title: >
+  This is a metadata placeholder.
 description: >
   Make sure the site doesn’t break!
 
