Run Prettier on full codebase

--- a/content/posts/XX-placeholder/placeholder.mdx
+++ b/content/posts/XX-placeholder/placeholder.mdx
@@ -21,4 +21,6 @@ images:
 cta: default
 ---
 
-This is a placeholder post. It won’t be displayed. The only reason it exists at all is to set up metadata in the Gatsby schema so nothing breaks when the theme is installed.
+This is a placeholder post. It won’t be displayed. The only reason it exists at
+all is to set up metadata in the Gatsby schema so nothing breaks when the theme
+is installed.
