--- a/src/pages/confirm.mdx
+++ b/src/pages/confirm.mdx
@@ -2,6 +2,9 @@
 title: Please Check Your Email
 ---
 
-In a minute or two you’ll receive an email asking you to confirm your email address. This is so I can make sure I’m not spamming people.
+In a minute or two you’ll receive an email asking you to confirm your email
+address. This is so I can make sure I’m not spamming people.
 
-If you don’t see the email, please check your spam folder. You can also add <jason@lengstorf.com> to your address book, which will make sure the messages get through.
+If you don’t see the email, please check your spam folder. You can also add
+<jason@lengstorf.com> to your address book, which will make sure the messages
+get through.
